sumo/tests/sumo/spec/flow/errors/neg_period/options.sumo
--no-step-log -b 0 -e 1 --no-duration-log --net-file=net.net.xml -a=input_routes.rou.xml,input_additional.add.xml  --netstate-dump=rawdump.xml 
